<resources>
    <string name="app_name">Kiribati Translate</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Enter Kiribati Translation</string>
    <string name="correct">Correct</string>
    <string name="no_translation">No Translation</string>
    <string name="skip_4_now">Skip Word/Do Later</string>
    <string name="make_dict">Make Dictionary DB</string>
    <string name="english_phrase">Test</string>
    <string name="search">Search</string>
    <string name="enter_eng_word">Enter English Word/Phrase</string>
    <string name="enter_kir_word">Enter Kiribati Word/Phrase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
